--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "laracasts/generators": "^1.1"
+        "laracasts/generators": "^1.1",
+        "backpack/generators": "^1.1"
     },
     "autoload": {
         "classmap": [
