installed backpack/backupmanager

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "backpack/base": "^0.6.4",
-        "backpack/crud": "^2.0"
+        "backpack/crud": "^2.0",
+        "backpack/backupmanager": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
