installed backpack/logmanager

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "backpack/base": "^0.6.4",
         "backpack/crud": "^2.0",
-        "backpack/backupmanager": "^1.1"
+        "backpack/backupmanager": "^1.1",
+        "backpack/logmanager": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
