installed backpack/newscrud

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "backpack/logmanager": "^2.3",
         "backpack/settings": "^2.0",
         "backpack/pagemanager": "^1.0",
-        "backpack/MenuCRUD": "^1.0"
+        "backpack/MenuCRUD": "^1.0",
+        "backpack/newscrud": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
