--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "backpack/base": "^0.7.0",
         "backpack/crud": "^3.2.0",
         "backpack/backupmanager": "^1.1",
@@ -20,10 +20,10 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.7",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "laracasts/generators": "^1.1",
+        "laracasts/generators": "dev-master",
         "backpack/generators": "^1.1"
     },
     "autoload": {
