--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "backpack/pagemanager": "^1.1",
         "backpack/MenuCRUD": "^1.0",
         "backpack/newscrud": "^2.1",
-        "backpack/permissionmanager": "^2.1"
+        "backpack/permissionmanager": "^2.1",
+        "creativeorange/gravatar": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
