--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "license": "proprietary",
     "type": "project",
     "require": {
         "php": ">=7.0",
