--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.0",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.6.*",
+        "fideloper/proxy": "^4.0",
         "backpack/base": "^0.9.0",
         "backpack/crud": "^3.4.0",
         "backpack/backupmanager": "^1.1",
@@ -22,7 +23,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "^7.0",
         "filp/whoops": "~2.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
