--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,18 @@
     "license": "proprietary",
     "type": "project",
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1.3",
         "laravel/framework": "5.7.*",
         "fideloper/proxy": "^4.0",
-        "backpack/base": "^1.0.0",
-        "backpack/crud": "^3.5.0",
+        "backpack/crud": "3.5.*",
         "backpack/backupmanager": "^1.1",
         "backpack/logmanager": "^2.3",
         "backpack/settings": "^2.0",
         "backpack/pagemanager": "^1.1",
-        "backpack/MenuCRUD": "^1.0",
+        "backpack/menucrud": "^1.0",
         "backpack/newscrud": "^2.1",
         "backpack/permissionmanager": "4.0.*",
-        "spatie/laravel-translatable": "^2.1",
+        "spatie/laravel-translatable": "^3.0",
         "barryvdh/laravel-elfinder": "^0.4.0"
     },
     "require-dev": {
