--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "backpack/newscrud": "^2.1",
         "backpack/permissionmanager": "4.0.*",
         "spatie/laravel-translatable": "^3.0",
-        "barryvdh/laravel-elfinder": "^0.4.0"
+        "barryvdh/laravel-elfinder": "^0.4.0",
+        "spatie/laravel-backup": "^6.1",
+        "backpack/backupmanager": "1.4.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
