--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.1.3",
         "laravel/framework": "5.8.*",
         "fideloper/proxy": "^4.0",
-        "backpack/crud": "3.6.*",
+        "backpack/crud": "dev-v4 as 3.6.99",
         "backpack/logmanager": "^2.3",
         "backpack/settings": "^2.0",
         "backpack/pagemanager": "^1.1",
