--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-/vendor
 /node_modules
+/public/hot
 /public/storage
-/storage/backups
-Homestead.yaml
-Homestead.json
+/storage/*.key
+/vendor
 .env
-.idea
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
