--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.1.3",
         "laravel/framework": "5.8.*",
         "fideloper/proxy": "^4.0",
-        "backpack/crud": "dev-v4 as 3.6.99",
+        "backpack/base": "v4.x-dev as 1.1.99",
+        "backpack/crud": "v4.x-dev as 3.6.99",
         "backpack/logmanager": "^2.3",
         "backpack/settings": "^2.0",
         "backpack/pagemanager": "^1.1",
@@ -63,5 +64,7 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
