using package versions instead of dev branches

--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
         "php": ">=7.2.0",
         "laravel/framework": "^6.0",
         "fideloper/proxy": "^4.0",
-        "backpack/crud": "v4.0.*",
-        "backpack/logmanager": "v4.x-dev as 4.0.0",
-        "backpack/settings": "v4.x-dev as 4.0.0",
-        "backpack/pagemanager": "v4.x-dev as 2.0.0",
-        "backpack/menucrud": "v4.x-dev as 4.0.0",
-        "backpack/newscrud": "v4.x-dev as 4.0.0",
-        "backpack/permissionmanager": "v4.x-dev as 4.0.0",
-        "backpack/backupmanager": "v4.x-dev as 4.0.0",
+        "backpack/crud": "^4.0.0",
+        "backpack/logmanager": "^3.0.0",
+        "backpack/settings": "^3.0.0",
+        "backpack/pagemanager": "^2.0.0",
+        "backpack/menucrud": "^2.0.0",
+        "backpack/newscrud": "^3.0.0",
+        "backpack/permissionmanager": "^5.0",
+        "backpack/backupmanager": "^2.0.0",
+        "backpack/generators": "^2.0",
         "spatie/laravel-translatable": "^4.0",
         "barryvdh/laravel-elfinder": "^0.4.3",
         "spatie/laravel-backup": "^6.1"
