--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,14 @@ language: php
 php:
   - 7.2
   - 7.3
+  - 7.4
+  - 8.0
+  - nightly
 
 matrix:
     allow_failures:
-        - php: 7.3
+        - php: 8.0
+        - php: nightly
 
 env:
   global:
