ran composer update with forced platform php 7.3.9

--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,9 @@
         "test": "vendor/bin/phpunit --testdox"
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "platform": {
+            "php": "7.3.9"
+        }
     }
 }
