--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "spatie/laravel-backup": "^6.1",
         "laravel/tinker": "^2.1",
         "facade/ignition": "^2.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "backpack/revise-operation": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
