using elFinder as add-on

--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         "backpack/backupmanager": "^2.0.0",
         "backpack/generators": "^2.0",
         "spatie/laravel-translatable": "^4.0",
-        "barryvdh/laravel-elfinder": "^0.4.5",
         "spatie/laravel-backup": "^6.1",
         "laravel/tinker": "^2.1",
         "facade/ignition": "^2.0",
         "intervention/image": "^2.3",
-        "backpack/revise-operation": "^1.0"
+        "backpack/revise-operation": "^1.0",
+        "backpack/filemanager": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -33,7 +33,8 @@
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "laracasts/generators": "^1.0",
         "backpack/generators": "^2.0",
-        "itsgoingd/clockwork": "^4.0"
+        "itsgoingd/clockwork": "^4.0",
+        "jeroen-g/laravel-packager": "^2.5"
     },
     "autoload": {
         "classmap": [
