--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.3",
         "laravel/framework": "^7.0",
         "fideloper/proxy": "^4.0",
-        "backpack/crud": "^4.0.0",
+        "backpack/crud": "widgets-manager-dev as 4.0.99",
         "backpack/logmanager": "^3.0.0",
         "backpack/settings": "^3.0.0",
         "backpack/pagemanager": "^2.0.0",
