--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit" : "^9.0||^7.0",
+        "mockery/mockery": "1.3.*",
+        "phpunit/phpunit" : "^9.0||^8.5||^7.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "symfony/dom-crawler": "^5.0.2|3.0.*|2.8.*",
         "laracasts/generators": "^1.0",
         "backpack/generators": "^2.0",
         "itsgoingd/clockwork": "^4.0"
