removed composer.lock file

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,9 @@
         "backpack/settings": "^3.0.0",
         "backpack/pagemanager": "^2.0.0",
         "backpack/menucrud": "^2.0.0",
-        "backpack/newscrud": "^3.0.0",
-        "backpack/permissionmanager": "^5.0",
+        "backpack/newscrud": "4.1.x-dev as 3.0.99|^4.0.0",
+        "backpack/permissionmanager": "4.1.x-dev as 5.0.99|^6.0.0",
         "backpack/backupmanager": "^2.0.0",
-        "backpack/generators": "^2.0",
         "spatie/laravel-translatable": "^4.0",
         "barryvdh/laravel-elfinder": "^0.4.5",
         "spatie/laravel-backup": "^6.1",
@@ -34,7 +33,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "^5.0.2|3.0.*|2.8.*",
         "laracasts/generators": "^1.0",
-        "backpack/generators": "^2.0",
+        "backpack/generators": "4.1.x-dev as 3.0.0|^3.0",
         "itsgoingd/clockwork": "^4.0",
         "barryvdh/laravel-debugbar": "^3.2"
     },
