updated composer with versions for soft-released backpack 4.1

--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
         "php": ">=7.3",
         "laravel/framework": "^7.0",
         "fideloper/proxy": "^4.0",
-        "backpack/crud": "4.1.x-dev as 4.1.0",
-        "backpack/logmanager": "^4.0|4.1.x-dev as 4.0.0",
+        "backpack/crud": "4.1.*",
+        "backpack/logmanager": "^4.0",
         "backpack/settings": "^3.0",
-        "backpack/pagemanager": "4.1.x-dev as 3.0.0",
+        "backpack/pagemanager": "^3.0.0",
         "backpack/menucrud": "^2.0.5",
-        "backpack/newscrud": "^4.0|4.1.x-dev as 4.0.0",
-        "backpack/permissionmanager": "^6.0|4.1.x-dev as 6.0.0",
-        "backpack/backupmanager": "^3.0|4.1.x-dev as 3.0.0",
+        "backpack/newscrud": "^4.0",
+        "backpack/permissionmanager": "^6.0",
+        "backpack/backupmanager": "^3.0",
         "spatie/laravel-translatable": "^4.0",
         "laravel/tinker": "^2.1",
         "facade/ignition": "^2.0",
