--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
+APP_NAME=local
 APP_ENV=local
+APP_KEY=base64:t/RoN0Vj+VpQ+K7Le+5WXnErFRa0B1uIToMNltCuvK8=
 APP_DEBUG=true
-APP_KEY=SomeRandomString
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
+APP_LOG=daily
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -10,9 +14,11 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -25,5 +31,17 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 MYSQL_DUMP_PATH=/Applications/MAMP/Library/bin/
