--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - APP_ENV=local
     - APP_DEBUG=true
     - APP_KEY=base64:jNI+qJRj1eqN3RWMeBWo6sxMwKzgDP7Py2AfRJ1luyA=
-    - APP_URL=http://localhost
+    - APP_URL=http://127.0.0.1:8000
     - DB_CONNECTION=mysql
     - DB_HOST=127.0.0.1
     - DB_PORT=3306
@@ -50,7 +50,7 @@ before_install:
 
 
 install: 
-    - cp .env.testing .env
+    - cp .env.example .env
     - travis_retry composer install --no-interaction --prefer-source
     - php artisan key:generate
     - php artisan dusk:chrome-driver
