--- a/public/packages/source-sans-pro/package.json
+++ b/public/packages/source-sans-pro/package.json
@@ -1,10 +1,4 @@
 {
-  "_args": [
-    [
-      "source-sans-pro@3.6.0",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
   "_from": "source-sans-pro@3.6.0",
   "_id": "source-sans-pro@3.6.0",
   "_inBundle": false,
@@ -22,22 +16,26 @@
     "fetchSpec": "3.6.0"
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
   "_resolved": "https://registry.npmjs.org/source-sans-pro/-/source-sans-pro-3.6.0.tgz",
-  "_spec": "3.6.0",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_shasum": "f4167065ebf096136b1b4f141dbd48886dda1486",
+  "_spec": "source-sans-pro@3.6.0",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "Paul D. Hunt"
   },
   "bugs": {
     "url": "https://github.com/adobe-fonts/source-sans-pro/issues"
   },
+  "bundleDependencies": false,
   "contributors": [
     {
       "name": "Miguel Sousa"
     }
   ],
+  "deprecated": false,
   "description": "Source Sans Pro is a set of OpenType fonts that have been designed to work well in user interface (UI) environments.",
   "homepage": "https://adobe-fonts.github.io/source-sans-pro",
   "keywords": [
