--- a/public/packages/ckeditor/package.json
+++ b/public/packages/ckeditor/package.json
@@ -1,10 +1,4 @@
 {
-  "_args": [
-    [
-      "ckeditor@4.12.1",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
   "_from": "ckeditor@4.12.1",
   "_id": "ckeditor@4.12.1",
   "_inBundle": false,
@@ -22,11 +16,13 @@
     "fetchSpec": "4.12.1"
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
   "_resolved": "https://registry.npmjs.org/ckeditor/-/ckeditor-4.12.1.tgz",
-  "_spec": "4.12.1",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_shasum": "954a7b028dd611e44ba51cc7c2fe051cf1052186",
+  "_spec": "ckeditor@4.12.1",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "CKSource",
     "url": "http://cksource.com/"
@@ -34,6 +30,8 @@
   "bugs": {
     "url": "http://dev.ckeditor.com"
   },
+  "bundleDependencies": false,
+  "deprecated": "We have renamed the @ckeditor package. New versions are available under the @ckeditor4 name.",
   "description": "JavaScript WYSIWYG web text editor.",
   "homepage": "http://ckeditor.com",
   "keywords": [
