--- a/public/packages/datatables.net-bs4/package.json
+++ b/public/packages/datatables.net-bs4/package.json
@@ -1,34 +1,30 @@
 {
-  "_args": [
-    [
-      "datatables.net-bs4@1.10.20",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
-  "_from": "datatables.net-bs4@1.10.20",
-  "_id": "datatables.net-bs4@1.10.20",
+  "_from": "datatables.net-bs4@1.10.21",
+  "_id": "datatables.net-bs4@1.10.21",
   "_inBundle": false,
-  "_integrity": "sha512-kQmMUMsHMOlAW96ztdoFqjSbLnlGZQ63iIM82kHbmldsfYdzuyhbb4hTx6YNBi481WCO3iPSvI6YodNec46ZAw==",
+  "_integrity": "sha512-F9zabYw8ZLXfjvj2S+BdnbkEUsL48bJwWxQFrA47cOXrIvsMhW8nmqPZcIMK4ko3k1i74nbpWLO1t+vueQKoXQ==",
   "_location": "/datatables.net-bs4",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "datatables.net-bs4@1.10.20",
+    "raw": "datatables.net-bs4@1.10.21",
     "name": "datatables.net-bs4",
     "escapedName": "datatables.net-bs4",
-    "rawSpec": "1.10.20",
+    "rawSpec": "1.10.21",
     "saveSpec": null,
-    "fetchSpec": "1.10.20"
+    "fetchSpec": "1.10.21"
   },
   "_requiredBy": [
+    "#USER",
     "/",
     "/datatables.net-fixedheader-bs4",
     "/datatables.net-responsive-bs4"
   ],
-  "_resolved": "https://registry.npmjs.org/datatables.net-bs4/-/datatables.net-bs4-1.10.20.tgz",
-  "_spec": "1.10.20",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_resolved": "https://registry.npmjs.org/datatables.net-bs4/-/datatables.net-bs4-1.10.21.tgz",
+  "_shasum": "7a9ae489ebbd815cd869292450d284edd0f44697",
+  "_spec": "datatables.net-bs4@1.10.21",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "SpryMedia Ltd",
     "url": "http://datatables.net"
@@ -36,10 +32,12 @@
   "bugs": {
     "url": "https://datatables.net/forums"
   },
+  "bundleDependencies": false,
   "dependencies": {
-    "datatables.net": "1.10.20",
+    "datatables.net": "1.10.21",
     "jquery": ">=1.7"
   },
+  "deprecated": false,
   "description": "DataTables for jQuery with styling for [Bootstrap 4](http://getbootstrap.com/)",
   "files": [
     "css/**/*.css",
@@ -58,5 +56,5 @@
   "main": "./js/dataTables.bootstrap4.js",
   "name": "datatables.net-bs4",
   "style": "./css/dataTables.bootstrap4.css",
-  "version": "1.10.20"
+  "version": "1.10.21"
 }
