--- a/public/packages/datatables.net-responsive-bs4/package.json
+++ b/public/packages/datatables.net-responsive-bs4/package.json
@@ -1,32 +1,28 @@
 {
-  "_args": [
-    [
-      "datatables.net-responsive-bs4@2.2.3",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
-  "_from": "datatables.net-responsive-bs4@2.2.3",
-  "_id": "datatables.net-responsive-bs4@2.2.3",
+  "_from": "datatables.net-responsive-bs4@2.2.4",
+  "_id": "datatables.net-responsive-bs4@2.2.4",
   "_inBundle": false,
-  "_integrity": "sha512-SQaWI0uLuPcaiBBin9zX+MuQfTSIkK1bYxbXqUV6NLkHCVa6PMQK7Rvftj0ywG4R7uOtjbzY8nSVqxEKvQI0Vg==",
+  "_integrity": "sha512-72AFQbl4KAze0MrAWehmrMX3sB2fkLWvXs44zkLGnWx10Auw6F8LAZQ4qwsPI9gPGIl03KBCeGqqDoDqJnw38w==",
   "_location": "/datatables.net-responsive-bs4",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "datatables.net-responsive-bs4@2.2.3",
+    "raw": "datatables.net-responsive-bs4@2.2.4",
     "name": "datatables.net-responsive-bs4",
     "escapedName": "datatables.net-responsive-bs4",
-    "rawSpec": "2.2.3",
+    "rawSpec": "2.2.4",
     "saveSpec": null,
-    "fetchSpec": "2.2.3"
+    "fetchSpec": "2.2.4"
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/datatables.net-responsive-bs4/-/datatables.net-responsive-bs4-2.2.3.tgz",
-  "_spec": "2.2.3",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_resolved": "https://registry.npmjs.org/datatables.net-responsive-bs4/-/datatables.net-responsive-bs4-2.2.4.tgz",
+  "_shasum": "0fef98a46b738ce2240d94a3be91ecf83c2a49b2",
+  "_spec": "datatables.net-responsive-bs4@2.2.4",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "SpryMedia Ltd",
     "url": "http://datatables.net"
@@ -34,11 +30,13 @@
   "bugs": {
     "url": "https://datatables.net/forums"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "datatables.net-bs4": "^1.10.15",
-    "datatables.net-responsive": "2.2.3",
+    "datatables.net-responsive": "2.2.4",
     "jquery": ">=1.7"
   },
+  "deprecated": false,
   "description": "Responsive for DataTables with styling for [Bootstrap 4](http://getbootstrap.com/)",
   "files": [
     "css/**/*.css",
@@ -56,5 +54,5 @@
   "main": "js/responsive.bootstrap4.js",
   "name": "datatables.net-responsive-bs4",
   "style": "css/responsive.bootstrap4.css",
-  "version": "2.2.3"
+  "version": "2.2.4"
 }
