--- a/public/packages/datatables.net-responsive/package.json
+++ b/public/packages/datatables.net-responsive/package.json
@@ -1,33 +1,29 @@
 {
-  "_args": [
-    [
-      "datatables.net-responsive@2.2.3",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
-  "_from": "datatables.net-responsive@2.2.3",
-  "_id": "datatables.net-responsive@2.2.3",
+  "_from": "datatables.net-responsive@2.2.4",
+  "_id": "datatables.net-responsive@2.2.4",
   "_inBundle": false,
-  "_integrity": "sha512-8D6VtZcyuH3FG0Hn5A4LPZQEOX3+HrRFM7HjpmsQc/nQDBbdeBLkJX4Sh/o1nzFTSneuT1Wh/lYZHVPpjcN+Sw==",
+  "_integrity": "sha512-Z/cmagi3pY75Cb2cbE22NUxvl5Q0IrqSE8ICWZb2XyIJmSnyTTilsgTaBy4WId+yKtwSa2asjQR2LQgV2QSfkg==",
   "_location": "/datatables.net-responsive",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "datatables.net-responsive@2.2.3",
+    "raw": "datatables.net-responsive@2.2.4",
     "name": "datatables.net-responsive",
     "escapedName": "datatables.net-responsive",
-    "rawSpec": "2.2.3",
+    "rawSpec": "2.2.4",
     "saveSpec": null,
-    "fetchSpec": "2.2.3"
+    "fetchSpec": "2.2.4"
   },
   "_requiredBy": [
+    "#USER",
     "/",
     "/datatables.net-responsive-bs4"
   ],
-  "_resolved": "https://registry.npmjs.org/datatables.net-responsive/-/datatables.net-responsive-2.2.3.tgz",
-  "_spec": "2.2.3",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_resolved": "https://registry.npmjs.org/datatables.net-responsive/-/datatables.net-responsive-2.2.4.tgz",
+  "_shasum": "abe21c9dc2fd0cb92e28e5c1d5fa2c6a5c84b3ff",
+  "_spec": "datatables.net-responsive@2.2.4",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "SpryMedia Ltd",
     "url": "http://datatables.net"
@@ -35,10 +31,12 @@
   "bugs": {
     "url": "https://datatables.net/forums"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "datatables.net": "^1.10.15",
     "jquery": ">=1.7"
   },
+  "deprecated": false,
   "description": "Responsive for DataTables ",
   "files": [
     "js/**/*.js"
@@ -58,5 +56,5 @@
     "type": "git",
     "url": "git+https://github.com/DataTables/Dist-DataTables-Responsive.git"
   },
-  "version": "2.2.3"
+  "version": "2.2.4"
 }
