--- a/public/packages/jquery-colorbox/package.json
+++ b/public/packages/jquery-colorbox/package.json
@@ -1,10 +1,4 @@
 {
-  "_args": [
-    [
-      "jquery-colorbox@1.6.4",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
   "_from": "jquery-colorbox@1.6.4",
   "_id": "jquery-colorbox@1.6.4",
   "_inBundle": false,
@@ -22,11 +16,13 @@
     "fetchSpec": "1.6.4"
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
   "_resolved": "https://registry.npmjs.org/jquery-colorbox/-/jquery-colorbox-1.6.4.tgz",
-  "_spec": "1.6.4",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_shasum": "799452523a6c494839224ef702e807deb9c06cc5",
+  "_spec": "jquery-colorbox@1.6.4",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "Jack Moore",
     "email": "hello@jacklmoore.com",
@@ -35,10 +31,12 @@
   "bugs": {
     "url": "https://github.com/jackmoore/colorbox/issues"
   },
+  "bundleDependencies": false,
   "demo": "http://www.jacklmoore.com/colorbox",
   "dependencies": {
     "jquery": ">=1.3.2"
   },
+  "deprecated": false,
   "description": "jQuery lightbox and modal window plugin.",
   "homepage": "http://www.jacklmoore.com/colorbox",
   "keywords": [
