--- a/public/packages/jquery-ui-dist/package.json
+++ b/public/packages/jquery-ui-dist/package.json
@@ -1,10 +1,4 @@
 {
-  "_args": [
-    [
-      "jquery-ui-dist@1.12.1",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
   "_from": "jquery-ui-dist@1.12.1",
   "_id": "jquery-ui-dist@1.12.1",
   "_inBundle": false,
@@ -22,12 +16,13 @@
     "fetchSpec": "1.12.1"
   },
   "_requiredBy": [
-    "/",
-    "/angular-ui-sortable"
+    "#USER",
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/jquery-ui-dist/-/jquery-ui-dist-1.12.1.tgz",
-  "_spec": "1.12.1",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_shasum": "5c0815d3cc6f90ff5faaf5b268a6e23b4ca904fa",
+  "_spec": "jquery-ui-dist@1.12.1",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "jQuery Foundation and other contributors",
     "url": "https://github.com/jquery/jquery-ui/blob/1.12.1/AUTHORS.txt"
@@ -35,7 +30,9 @@
   "bugs": {
     "url": "https://bugs.jqueryui.com/"
   },
+  "bundleDependencies": false,
   "dependencies": {},
+  "deprecated": false,
   "description": "A curated set of user interface interactions, effects, widgets, and themes built on top of the jQuery JavaScript Library.",
   "devDependencies": {
     "commitplease": "2.3.0",
