--- a/public/packages/nestedSortable/package.json
+++ b/public/packages/nestedSortable/package.json
@@ -1,10 +1,4 @@
 {
-  "_args": [
-    [
-      "nestedSortable@1.3.4",
-      "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud"
-    ]
-  ],
   "_from": "nestedSortable@1.3.4",
   "_id": "nestedSortable@1.3.4",
   "_inBundle": false,
@@ -22,11 +16,13 @@
     "fetchSpec": "1.3.4"
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
   "_resolved": "https://registry.npmjs.org/nestedSortable/-/nestedSortable-1.3.4.tgz",
-  "_spec": "1.3.4",
-  "_where": "/Users/tabacitu/Sites/bp41repeatable/vendor/backpack/crud",
+  "_shasum": "23bcd4294462ba117c1751ef570ded14cbae3354",
+  "_spec": "nestedSortable@1.3.4",
+  "_where": "/Users/tabacitu/Sites/bp41softlaunched/vendor/backpack/crud",
   "author": {
     "name": "Manuele J Sarfatti",
     "email": "manuele@mjsarfatti.com"
@@ -34,6 +30,8 @@
   "bugs": {
     "url": "https://github.com/ilikenwf/nestedSortable/issues"
   },
+  "bundleDependencies": false,
+  "deprecated": false,
   "description": "NestedSortable is a jQuery plugin that extends jQuery Sortable UI functionalities to nested lists.",
   "homepage": "https://github.com/ilikenwf/nestedSortable#readme",
   "main": "jquery.mjs.nestedSortable.js",
