--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 7.2
   - 7.3
   - 7.4
   - 8.0
@@ -10,6 +9,7 @@ php:
 matrix:
     allow_failures:
         - php: 7.2
+        - php: 7.3
         - php: 8.0
         - php: nightly
 
