try to make dusk tests run on travis by updating the chrome driver every time

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ install:
     - cp .env.example .env
     - travis_retry composer install --no-interaction --prefer-source
     - php artisan key:generate
+    - php artisan dusk:update
     - php artisan dusk:chrome-driver
 
 
