--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "backpack/generators": "^3.0",
         "itsgoingd/clockwork": "^4.0",
         "barryvdh/laravel-debugbar": "^3.2",
-        "laravel/dusk": "^6.1"
+        "laravel/dusk": "^6.1",
+        "staudenmeir/dusk-updater": "^1.1"
     },
     "autoload": {
         "classmap": [
