--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,25 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
+# MySQL Database Connection
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+
+# PostgreSQL Database Connection
+#DB_CONNECTION=pgsql
+#DB_HOST=127.0.0.1
+#DB_PORT=5432
+#DB_DATABASE=homestead
+#DB_USERNAME=tabacitu
+#DB_PASSWORD=
+
+# SQLite Database Connection
+#DB_CONNECTION=sqlite
+#DB_DATABASE=storage/app/database.sqlite
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
