--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ DB_PASSWORD=secret
 #DB_PASSWORD=
 
 # SQLite Database Connection
-# You might also need to run 'touch storage/app/database.sqlite`  to create the db```
+# You might also need to run 'touch storage/app/database.sqlite`  to create the db
 #DB_CONNECTION=sqlite
 #DB_DATABASE=storage/app/database.sqlite
 
