--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ DB_PASSWORD=secret
 # SQLite Database Connection
 # You might also need to run 'touch storage/app/database.sqlite`  to create the db
 #DB_CONNECTION=sqlite
-#DB_DATABASE=storage/app/database.sqlite
+#DB_DATABASE=../storage/app/database.sqlite
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
