--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "laravel/legacy-factories": "^1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
+        "fakerphp/faker": "~1.4",
         "mockery/mockery": "1.4.*",
         "phpunit/phpunit" : "^9.0||^8.5||^7.0",
         "symfony/css-selector": "2.8.*|3.0.*",
