added Helo mail connection to env file (commented out)

--- a/.env.example
+++ b/.env.example
@@ -32,12 +32,21 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Mailtrap Mail Connection
 MAIL_MAILER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+# Helo Mail Connection
+# MAIL_MAILER=smtp
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=backpack-demo
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
 
 
 MYSQL_DUMP_PATH=/Applications/MAMP/Library/bin/
