--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "backpack/revise-operation": "^1.0",
         "backpack/filemanager": "^1.0",
         "consoletvs/charts": "6.*",
-        "laravel/legacy-factories": "^1.0"
+        "laravel/legacy-factories": "^1.0",
+        "mews/purifier": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
