--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,9 @@
         "preferred-install": "dist",
         "platform": {
             "php": "7.4.0"
+        },
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
         }
     },
     "minimum-stability": "dev",
