upgraded to Laravel 9 beta

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,9 @@
     "license": "proprietary",
     "type": "project",
     "require": {
-        "php": ">=7.3",
-        "laravel/framework": "^8.0",
-        "fideloper/proxy": "^4.0",
-        "backpack/crud": "^4.1.22",
+        "php": "^8.0",
+        "laravel/framework": "9.x-dev as 8.9.99",
+        "backpack/crud": "4.2.x-dev as 4.1.9",
         "backpack/logmanager": "^4.0",
         "backpack/settings": "^3.0",
         "backpack/pagemanager": "^3.0.2",
@@ -18,10 +17,9 @@
         "backpack/backupmanager": "^3.0",
         "spatie/laravel-translatable": "^4.0",
         "laravel/tinker": "^2.1",
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "intervention/image": "^2.3",
         "backpack/revise-operation": "^1.0",
-        "backpack/filemanager": "^1.0",
         "consoletvs/charts": "6.*",
         "laravel/legacy-factories": "^1.0",
         "mews/purifier": "^3.3"
@@ -73,7 +71,7 @@
     "config": {
         "preferred-install": "dist",
         "platform": {
-            "php": "7.4.0"
+            "php": "8.0.2"
         },
         "allow-plugins": {
             "composer/package-versions-deprecated": true
