added FREE and PRO badges to all fields in Monster

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,9 @@
         }
     ],
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "classmap": [
             "database"
         ],
