using no alias for crud even in dev

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.3",
         "laravel/framework": "^8.0",
         "fideloper/proxy": "^4.0",
-        "backpack/crud": "v5.x-dev as 5.0.0",
+        "backpack/crud": "v5.x-dev",
         "backpack/pro": "^1.0",
         "backpack/logmanager": "^4.0",
         "backpack/settings": "^3.0",
