add fresh command to composer file

--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
             "@php artisan package:discover"
         ],
         "test": "vendor/bin/phpunit --testdox",
+        "fresh": "php artisan key:generate --force && php artisan db:wipe --force && php artisan migrate --force && php artisan db:seed --force && php artisan backup:clean && php artisan cache:clear && php artisan view:clear && php artisan config:clear",
         "bp-assets-publish": "php artisan vendor:publish --provider=\"Backpack\\CRUD\\BackpackServiceProvider\" --tag=public --force",
         "bp-assets-link": "cd public && rm -rf packages || true && ln -s ../vendor/backpack/crud/src/public/packages && cd ../",
         "bp-assets-unlink": "rm -rf public/packages || true && composer bp-assets-publish"
