--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.0",
         "laravel/framework": "^9.0",
         "digitallyhappy/assets": "dev-bassets as 2.99.99",
-        "backpack/crud": "dev-bassets as 5.99.99",
+        "backpack/crud": "dev-v6 as 5.99.99",
         "backpack/pro": "dev-bassets as 1.99.99",
         "backpack/logmanager": "^4.0",
         "backpack/settings": "^3.0",
