add media library

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "mews/purifier": "^3.3",
         "backpack/filemanager": "^2.0",
         "backpack/backupmanager": "^3.0",
-        "backpack/editable-columns": "^2.0"
+        "backpack/editable-columns": "^2.0",
+        "spatie/laravel-medialibrary": "^10.7"
     },
     "require-dev": {
         "fakerphp/faker": "~1.4",
