--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,8 @@
             "@php artisan package:discover"
         ],
         "test": "vendor/bin/phpunit --testdox",
-        "fresh": "php artisan key:generate --force && php artisan db:wipe --force && php artisan migrate --force && php artisan db:seed --force && php artisan backup:clean && php artisan cache:clear && php artisan view:clear && php artisan config:clear"
+        "fresh": "php artisan key:generate --force && php artisan db:wipe --force && php artisan migrate --force && php artisan db:seed --force && php artisan backup:clean && php artisan cache:clear && php artisan view:clear && php artisan config:clear",
+        "switched": "composer update --prefer-source -W && php artisan optimize:clear && php artisan basset:internalize"
     },
     "config": {
         "preferred-install": "dist",
